--- a/css/about.css
+++ b/css/about.css
@@ -74,6 +74,8 @@ body {
   margin-top: -20px;
   color: white;
 }
+
+/* breadcrumb start */
 .breadcrumb-item a:hover {
   color: #435907;
 }
@@ -83,10 +85,34 @@ body {
   font-weight: 700;
 }
 
+/* breadcrumb end */
+
+.about h3 {
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120px; /* 111.111% */
+}
+.card {
+  text-align: center;
+  border: none;
+  gap: 5px;
+  width: 400px;
+}
+.card .card-title {
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+}
+.chef {
+  margin-top: 300px;
+}
+
 /* footer start */
 .footer {
   background-color: #233000;
   margin-top: 100px;
+  padding-top: 100px;
   color: white;
 }
 .footer h2 {
