--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@ body {
   font-family: "rufina";
   background-color: #233000;
 }
-/* Header*/
+/* Header Start */
 .header-contact {
   background-color: #233000;
   padding: 20px;
@@ -19,7 +19,9 @@ body {
   font-size: 15px;
   margin-right: 10px;
 }
-/* Navbar start */
+/* Header End */
+
+/* Navbar Start */
 .navbar .navbar-nav {
   gap: 50px;
 }
@@ -54,7 +56,7 @@ body {
   font-size: 35px;
   font-weight: bold;
 }
-/* Navbar end */
+/* Navbar End */
 
 /* Jumbotron Start*/
 .jumbotron {
@@ -93,6 +95,8 @@ body {
   font-weight: 700;
 }
 /* Breadcrumb End */
+
+/* About Start */
 .about {
   background-color: white;
   padding-bottom: 100px;
@@ -116,12 +120,11 @@ body {
   font-style: normal;
   font-weight: 700;
 }
-
+/* Header End */
 
 /* footer start */
 .footer {
-  background-color: #233000;
-  padding-top: 100px;
+  margin-top: 50px;
   color: white;
 }
 .footer h2 {
